# ateles

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .mcp.json.example  .sops.yaml  Brewfile  CLAUDE.md  HANDOFF.md  LICENSE  README.md  analisis-oferta-passatge-alio.md  passatge-alio-offer-analysis-EN.md  pyproject.toml
.claude/: .gitignore  agent-routing.json  settings.json
.claude/agents/: scout.md  worker.md
.claude/hooks/: README.md  _session_integrity.py  agent_auto_invocation.py  ateles-session-start.sh  onychomys-session-start.sh  route_issue_authoring.py  session_start.py  stop_finalizer.py  user_prompt_submit.py
.claude/rules/: agent-routing.md  btc-payment-output.md  credential-storage.md
.github/workflows/: ateles-tests.yml  lanius-stale-issues.yml  loxia-pr-review.yml  secret-pii-scan.yml
ateles/: __init__.py  __main__.py  cli.py  config.py  doctor.py  initialize.py  provision.py  secrets.py  test_cli.py  test_config.py  test_doctor.py  test_initialize.py  test_provision.py  test_secrets.py
deploy/cloud/: Dockerfile  README.md  bootstrap-host.sh  docker-compose.yml  entrypoint.sh
docs/: README.md  a2a.md  aauth.md  agent_auto_invocation.md  agent_dependency_discovery_signal_loss.md  agent_execution_architecture.md  agent_execution_runbook.md  agent_instructions_strengthen_mcp_conversation_turns.md  architecture.md  automatic-submodule-initialization.md  buteo_design_rationale.md  capabilities.md  cloud_hosting.md  commit_message_validation_improvements.md  configuration.md  credential_health.md  credential_management.md  daemon_rc_autodeploy.md  data_publishing_privacy_guidelines.md  data_publishing_transformation.md  data_types.md  documentation_plan.md  durable_execution_substrate.md  email_loop_rollout_runbook.md  email_routing.md  forking.md  foundation-vs-ateles-rules.md  generic_pdf_form_filler_guide.md  homekit_manual_pairing_guide.md  icp.md  installability.md  language_command.md  legacy_data_types_inventory.md  linting-guide.md  mcp_resource_implementation_checklist.md  mcp_resource_implementation_summary.md  mcp_server_development_guide.md  mcp_server_resource_audit.md  multi_tenant.md  neotoma_io_redirect.md  (+24 more)
docs/aauth/: keys.md
docs/agents/: README.md  accipiter.md  anthus.md  apis.md  apus.md  aquila.md  ateles.md  aythya.md  buteo.md  cicada.md  ciconia.md  columba.md  corvus.md  cotinga.md  formica.md  fringilla.md  gorilla.md  hirundo.md  lanius.md  manucode.md  menura.md  monedula.md  neotoma-agent.md  pavo.md  phoenicurus.md  picus.md  regulus.md  robin.md  sitta.md  struthio.md  sturnus.md  sylvia.md  tyto.md  (+3 more)
dotfiles/: .zshrc  README.md  setup_symlinks.sh
execution/: README.md  newsletter-form.html
lib/: claude_client.py  issue_labels.py  model_tiers.py
mcp-servers/: AUTO_CONFIG_GENERATION.md  IDENTITY_PROXY.md  OAUTH_ENV_SETUP.md  OAUTH_SECURITY.md  OAUTH_SETUP.md  OAUTH_TESTING.md  QUICK_START_REMOTE.md  README.md  REMOTE_ACCESS_STATUS.md  RESTART_INSTRUCTIONS.md  mcp-config-template.json
scripts/: apply_pending_plan_decision.py  fix_terminal_tilde.sh  install-agent-auto-invocation.sh  install_git_hooks.sh  lint.sh  migrate_nosync.sh  move_airdrop_to_desktop.py  pending_plan_decision.json  reconcile_nosync.py  reconcile_nosync.sh  register_drift_signal_schema.py  rename_kebab_case_files.py  requirements.txt  revert_auto_policy.py  run_email_flow.py  run_with_clean_shell.sh  setup_airdrop_to_desktop.sh  setup_claude_skills.sh  update_readme_release_status.py  update_reimbursement_task_due_date.py
secrets/: README.md  manifest.env-map.json  neotoma.sops.env
(+1004 files in other folders)
