[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ateles"
version = "0.0.0"
description = "Personal agent swarm infrastructure — attributed, capability-scoped, Neotoma-canonical."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["agents", "swarm", "neotoma", "aauth", "automation"]

# Core runtime dependencies shared by the daemon runtime (lib/daemon_runtime)
# and the CLI. Per-daemon and optional extras live in the groups below; folding
# the repo's scattered requirements.txt files into these groups is remaining W0
# work (a uv/pip-tools lockfile is the "pinned/locked" follow-up).
dependencies = [
    "httpx>=0.27",          # Neotoma HTTP + SSE client
    "apprise>=1.7",         # notification routing (lib/notify)
    "cryptography>=42.0.0", # EC P-256 AAuth signing
    "PyJWT>=2.8.0",         # AAuth token minting
]

[project.optional-dependencies]
a2a = ["a2a-sdk>=0.3.0", "uvicorn>=0.30.0"]  # Apis A2A inbound gateway
watch = ["watchdog>=3.0.0"]                  # file-watching daemons
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ateles = "ateles.cli:main"

[project.urls]
Homepage = "https://github.com/markmhendrickson/ateles"
Issues = "https://github.com/markmhendrickson/ateles/issues"

[tool.hatch.build.targets.wheel]
packages = ["ateles"]
