[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ateles"
version = "0.0.0"
description = "Personal agent swarm infrastructure — attributed, capability-scoped, Neotoma-canonical."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["agents", "swarm", "neotoma", "aauth", "automation"]

# Core runtime dependencies shared by the daemon runtime (lib/daemon_runtime)
# and the CLI. Per-daemon and optional extras live in the groups below; folding
# the repo's scattered requirements.txt files into these groups is remaining W0
# work (a uv/pip-tools lockfile is the "pinned/locked" follow-up).
dependencies = [
    "httpx>=0.27",          # Neotoma HTTP + SSE client
    "apprise>=1.7",         # notification routing (lib/notify)
    "cryptography>=42.0.0", # EC P-256 AAuth signing
    "PyJWT>=2.8.0",         # AAuth token minting
]

[project.optional-dependencies]
# Apis A2A inbound gateway — folds execution/daemons/apis/requirements.txt.
a2a = ["a2a-sdk>=0.3.0", "uvicorn>=0.30.0"]
# File-watching daemons — folds scripts/requirements.txt.
watch = ["watchdog>=3.0.0"]
# Reference MCP servers under docs/mcp/* — union of their runtime deps so
# `pip install ateles[mcp-examples]` can run them. Each server still keeps its
# own requirements.txt for standalone use; removing those once this extra is
# validated is a follow-up. (httpx, used by the interviews server, is core.)
mcp-examples = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "asana>=5.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]
# Test + lint tooling for the package and the co-located test_*.py suite.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "ruff>=0.5",
]

[project.scripts]
ateles = "ateles.cli:main"

[project.urls]
Homepage = "https://github.com/markmhendrickson/ateles"
Issues = "https://github.com/markmhendrickson/ateles/issues"

[tool.hatch.build.targets.wheel]
packages = ["ateles"]
